Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-8380

Subquery parse error

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 5.5(EOL), 10.0(EOL), 10.1(EOL)
    • 10.1.8
    • Parser
    • None
    • 10.1.7-2, 10.1.8-1, 10.1.8-3, 10.1.8-4

    Description

      CREATE TABLE t1 (
      a INT
      );
      INSERT INTO t1 VALUES ( 2 );
      SELECT *
      FROM ( (SELECT a FROM t1 ORDER BY a) UNION (SELECT 1 as b ORDER BY b ) ) AS a1
      WHERE a1.a = 1 OR a1.a = 2;
      DROP TABLE t1;

      Fixed in MySQL, see revisions:
      0034963fbf199696792491bcb79d5f0731c98804
      5948561812bc691bd0c13cf518a3fe77d9daf920

      Attachments

        Issue Links

          Activity

            People

              sanja Oleksandr Byelkin
              svoj Sergey Vojtovich
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1.5h
                  1.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.